apps/core/openldap/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openldap-ltb-passwd
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`password.bhamm-lab.com`)
      middlewares:
        - name: lan-ips
        - name: default-headers
      services:
        - name: openldap-ltb-passwd
          port: 80
  tls:
    secretName: bhamm-lab-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openldap-phpldapadmin
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ldap-admin.bhamm-lab.com`)
      middlewares:
        - name: default-headers
      services:
        - name: openldap-phpldapadmin
          port: 80
  tls:
    secretName: bhamm-lab-tls
